--- a/Admin-Floresol - Sistema/Floresol-ADM/Floresol-ADM.csproj
+++ b/Admin-Floresol - Sistema/Floresol-ADM/Floresol-ADM.csproj
@@ -36,8 +36,9 @@
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
       <HintPath>..\packages\BouncyCastle.Cryptography.2.6.2\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
     </Reference>
-    <Reference Include="DaO">
-      <HintPath>..\..\..\..\..\..\source\repos\DaO\DaO\bin\Debug\DaO.dll</HintPath>
+    <Reference Include="DaO, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DLLs\DaO\DaO\bin\Debug\DaO.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.32.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.32.0\lib\net45\Google.Protobuf.dll</HintPath>
